--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,10 @@
     text-align: right;
     padding-right: 55px;
 }
+
+#weather-info{
+    list-style: none;
+    font-size: 12px;
+    text-align: left;
+    padding-left: 90px;
+}
