made the search bar's background transparent

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,8 @@
     padding: 10px;
     margin: 20px;
     border-color: aqua;
+    background-color: transparent;
+    
 }
 #btn-search{
     border-radius: 35px;
