removed the forecast

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 #btn-search{
     border-radius: 35px;
     background-color:transparent;
-    color: black;
+    color: white;
     width: 15%;
     border-color: aqua;
 }
