--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,22 @@
     margin: 0 auto;
     margin-top: 70px;   
 }
-.forecast{
-    max-width: 1000px;
-    margin: 0 auto;
-    margin-top: 70px; 
+.weather-forecast{
+    margin-top: 20px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.date{
+    font-size: 16px;
+    color: white;
+}
+.temp{
+    font-size: 13px;
+    color: white;
+}
+.min-temp{
+    opacity: 0.5;
 }
 #input-city{
     width: 75%;
